# aws-iot-device-sdk-rust

./: .gitmodules  Cargo.toml  README.md
.github/workflows/: ci.yaml
bindings/aws-c-auth-sys/: Cargo.toml  build.rs
bindings/aws-c-cal-sys/: Cargo.toml  build.rs
bindings/aws-c-common-sys/: Cargo.toml  build.rs
bindings/aws-c-common-sys/src/: lib.rs
bindings/aws-c-compression-sys/: Cargo.toml  build.rs
bindings/aws-c-event-stream-sys/: Cargo.toml  build.rs
bindings/aws-c-http-sys/: Cargo.toml  build.rs
bindings/aws-c-io-sys/: Cargo.toml  build.rs
bindings/aws-c-io-sys/src/: lib.rs
bindings/aws-c-iot-sys/: Cargo.toml  build.rs
bindings/aws-c-mqtt-sys/: Cargo.toml  build.rs
bindings/aws-c-s3-sys/: Cargo.toml  build.rs
bindings/aws-c-sdkutils-sys/: Cargo.toml  build.rs
bindings/aws-checksums-sys/: Cargo.toml  build.rs
scripts/: update-libraries.py  update-submodules.py
