[workspace]
members = ["packages/*"]
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/workspaces.html

[workspace.package]
authors = [
    "Silvestr Predko <silvestr1994@gmail.com>",
    "Simon Berger <simon.berger@inomotech.com>",
]
edition = "2021"
rust-version = "1.74"
repository = "https://github.com/inomotech-foss/aws-iot-device-sdk-rust"
publish = false

[workspace.dependencies]
aws-c-auth-sys = { path = "packages/aws-c-auth-sys" }
aws-c-builder = { path = "packages/aws-c-builder" }
aws-c-cal-sys = { path = "packages/aws-c-cal-sys" }
aws-c-common-sys = { path = "packages/aws-c-common-sys" }
aws-c-compression-sys = { path = "packages/aws-c-compression-sys" }
aws-c-event-stream-sys = { path = "packages/aws-c-event-stream-sys" }
aws-c-http-sys = { path = "packages/aws-c-http-sys" }
aws-c-io-sys = { path = "packages/aws-c-io-sys" }
aws-c-iot-sys = { path = "packages/aws-c-iot-sys" }
aws-c-mqtt-sys = { path = "packages/aws-c-mqtt-sys" }
aws-c-s3-sys = { path = "packages/aws-c-s3-sys" }
aws-c-sdkutils-sys = { path = "packages/aws-c-sdkutils-sys" }
aws-checksums-sys = { path = "packages/aws-checksums-sys" }
aws-crt-cpp-sys = { path = "packages/aws-crt-cpp-sys" }
aws-lc-sys = { path = "packages/aws-lc-sys" }
s2n-tls-sys = { path = "packages/s2n-tls-sys" }

bindgen = "0.69"
cmake = "0.1"
libc = "0.2"
regex = "1"
schannel = "0.1"
security-framework = "2"
