[workspace]
members = ["packages/*"]
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/workspaces.html

[workspace.package]
authors = [
    "Silvestr Predko <silvestr1994@gmail.com>",
    "Simon Berger <simon.berger@inomotech.com>",
]
edition = "2021"
license = "MIT OR Apache-2.0"
rust-version = "1.74"
repository = "https://github.com/inomotech-foss/aws-iot-device-sdk-rust"
publish = false

[workspace.dependencies]
aws-c-auth-sys = { path = "packages/aws-c-auth-sys" }
aws-c-builder = { path = "packages/aws-c-builder" }
aws-c-cal-sys = { path = "packages/aws-c-cal-sys" }
aws-c-common-sys = { path = "packages/aws-c-common-sys" }
aws-c-compression-sys = { path = "packages/aws-c-compression-sys" }
aws-c-event-stream-sys = { path = "packages/aws-c-event-stream-sys" }
aws-c-http-sys = { path = "packages/aws-c-http-sys" }
aws-c-io-sys = { path = "packages/aws-c-io-sys" }
aws-c-iot-sys = { path = "packages/aws-c-iot-sys" }
aws-c-mqtt-sys = { path = "packages/aws-c-mqtt-sys" }
aws-c-s3-sys = { path = "packages/aws-c-s3-sys" }
aws-c-sdkutils-sys = { path = "packages/aws-c-sdkutils-sys" }
aws-checksums-sys = { path = "packages/aws-checksums-sys" }
aws-crt = { path = "packages/aws-crt" }

aws-lc-sys = "0.12"
bindgen = "0.69"
cc = "1"
cmake = "0.1"
core-foundation = "0.9"
futures = "0.3"
libc = "0.2"
log = "0.4"
s2n-tls-sys = "0.1.0"
schannel = "0.1"
security-framework = "2"
